# tax-identifiers

./: AGENTS.md  README.md  pyproject.toml
.agents/rules/: project.md
.agents/skills/deslop-writing/: SKILL.md
.claude/rules/: project.md
.cursor/rules/: project.mdc
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: agent-sync.yml  code-review.yml  publish-to-pypi.yml  run_tests.yml
scripts/: build_ssn_allocation.py
tax_identifiers/: __init__.py  base.py  countries.py  enums.py  exceptions.py  fields.py  generic.py  masking.py  metadata.py  mixins.py  models.py  normalization.py  rules.py  validators.py
tax_identifiers/us/: __init__.py  enums.py  fields.py  matching.py  metadata.py  rules.py  tax_identifiers.py  transformers.py
tax_identifiers/us/static/: ssn_allocation.json  ssn_allocation.pkl
tax_validation/: __init__.py  base.py  countries.py  enums.py  exceptions.py  fields.py  generic.py  metadata.py  mixins.py  models.py  normalization.py  rules.py  validators.py
tax_validation/models/: base.py  mixins.py  tin.py
tax_validation/normalization/: fields.py  tax_identifiers.py  transformers.py
tax_validation/us/: __init__.py  enums.py  fields.py  metadata.py  mixins.py  models.py  rules.py  tax_identifiers.py  transformers.py  validator.py
tax_validation/validators/: base.py  us.py
tests/: conftest.py
tests/unit/: test_countries.py  test_fields.py  test_generic_rules.py  test_masking.py  test_matching.py  test_ssn_validation.py  test_tax_identifier.py  test_tax_identifiers.py  test_tax_validation.py  test_tin_model.py  test_tin_validation.py  test_transformers.py  test_us_validator.py
