[project]
name = "tax-identifiers"
version = "0.0.2"
description = "Validate tax identifiers and resolve their metadata with Pydantic"
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" },
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-super-model>=2.0.0",
    "pycountry>=26.2.16",
]

[project.urls]
Repository = "https://github.com/julien777z/tax-identifiers"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "coverage>=7.15.0",
]

[tool.black]
line-length = 110
target-version = ["py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"
line_length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
tests = "scripts.run_tests:main"

[tool.poetry]
packages = [
    {include = "tax_identifiers"},
    {include = "scripts"},
]
include = [
    { path = "tax_identifiers/us/static/*.pkl", format = ["sdist", "wheel"] },
    { path = "tax_identifiers/us/static/*.json", format = ["sdist"] },
]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
